# aiolos

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md
.agents/skills/project-anemos-protocol/: SKILL.md
.agents/skills/project-create-anemos/: SKILL.md
.agents/sow/: SOW.template.md  audit.sh
.agents/sow/current/: SOW-0001-20260528-implement-aiolos.md  SOW-0003-20260529-anemos-library-restructure.md  SOW-0004-20260529-nvme-anemos.md  SOW-0005-20260529-asrock-fan-rpm.md
.agents/sow/done/: SOW-0001-20260528-implement-aiolos.md  SOW-0003-20260529-anemos-library-restructure.md
.agents/sow/pending/: SOW-0001-20260528-implement-aiolos.md  SOW-0002-20260528-test-aiolos.md  SOW-0005-20260529-asrock-fan-rpm.md  SOW-0006-20260530-ipmi-temps-anemos.md  SOW-0007-20260530-prometheus-metrics.md  SOW-0008-20260530-fan-failure-detection.md  SOW-0009-20260530-nut-power-reactor.md  SOW-0010-20260530-per-zone-board-curves.md  SOW-0011-20260530-dashboard-redesign.md  SOW-0012-20260530-curve-loading-robustness.md  SOW-0013-20260530-decoupled-scheduler.md  SOW-0014-20260530-module-kinds-input-validation.md  SOW-0015-20260530-nvidia-powercap-thermal.md
.agents/sow/specs/: aiolos-orchestrator.spec.md  aiolos-protocol.spec.md  anemos-asrock16-2t.spec.md  anemos-gpu-powercap.spec.md  anemos-ipmi-temps.spec.md  anemos-nut.spec.md  anemos-nvidia-powercap.spec.md  anemos-nvidia.spec.md  anemos-nvme.spec.md
aiolos/: Cargo.toml
aiolos/src/: config.rs  instance.rs  main.rs  module.rs  registry.rs  status_page.rs
aiolos/src/assets/: aiolos.css  aiolos.js  index.html
aiolos/tests/: orchestrator.rs
anemoi/asrock16-2t/: Cargo.toml
anemoi/asrock16-2t/src/: board.rs  fault.rs  ipmi.rs  main.rs  zones.rs
anemoi/gpu-powercap/: Cargo.toml
anemoi/gpu-powercap/src/: inputs.rs  main.rs  policy.rs
anemoi/ipmi-temps/: Cargo.toml
anemoi/ipmi-temps/src/: main.rs  sensors.rs
anemoi/nut/: Cargo.toml
anemoi/nut/src/: config.rs  main.rs
anemoi/nvidia/: Cargo.toml
anemoi/nvidia-powercap/: Cargo.toml
anemoi/nvidia-powercap/src/: main.rs  policy.rs
anemoi/nvidia/src/: main.rs  nvml.rs
anemoi/nvme/: Cargo.toml
anemoi/nvme/src/: main.rs
anemos/: Cargo.toml
anemos/src/: controller.rs  curve.rs  damper.rs  lib.rs  run.rs  stdio.rs
packaging/: aiolos.conf  asrock16-2t.curve.json  gpu-powercap.conf  install.sh  nut.conf  nvidia-powercap.conf  nvidia.curve.json  update.sh
protocol/: Cargo.toml
protocol/src/: curve.rs  lib.rs  stdio.rs
systemd/: aiolos.service
tech/hwmon/: Cargo.toml
tech/hwmon/src/: lib.rs
tech/ipmi/: Cargo.toml
tech/ipmi/src/: lib.rs
tech/nut/: Cargo.toml
tech/nut/src/: lib.rs
tech/nvme/: Cargo.toml
tech/nvme/src/: lib.rs
tech/nvml/: Cargo.toml
tech/nvml/src/: lib.rs
