[workspace]
members = [
    "protocol",        # level-2 wire types (aiolos + anemos share)
    "anemos",          # level-2 anemos SDK (CLI/lifecycle/signals/logging/curve/EMA + traits)
    "tech/ipmi",       # level-1 tech: inband IPMI transport
    "tech/nvml",       # level-1 tech: NVML GPU access
    "tech/hwmon",      # level-1 tech: hwmon sysfs sensors
    "tech/nvme",       # level-1 tech: NVMe enumeration + per-drive temps
    "tech/nut",        # level-1 tech: NUT/upsc UPS client (read-only)
    "aiolos",          # orchestrator
    "anemoi/nvidia",   # level-3 anemos
    "anemoi/asrock16-2t",
    "anemoi/nvme",     # level-3 anemos (sensor-only: NVMe temps)
    "anemoi/ipmi-temps", # level-3 anemos (sensor-only: BMC board/CPU/DIMM/NIC temps)
    "anemoi/nut",      # level-3 anemos (sensor-only: UPS / utility-power state)
    "anemoi/nvidia-powercap", # level-3 anemos (curve-less control: cap GPU power on utility-power loss)
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["aiolos contributors"]

# Deliberately NO async runtime (tokio/async-std). The orchestrator is std-threads +
# blocking I/O by design — see DESIGN.md §10 and AGENTS.md project overrides.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
nvml-wrapper = "0.12.1"

# Lean release binaries (low-MB, single-digit-MB RSS goal).
# NOTE: unwinding is intentionally kept (no panic="abort") so the anemoi's Drop-based
# device restore fires on an unexpected panic — a fail-safe backstop. See anemoi *_restore.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
