[package]
name = "aiolos"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "aiolos"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
libc = { workspace = true }
