[package]
name = "anemoi-asrock16-2t"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "asrock16-2t"
path = "src/main.rs"

[dependencies]
protocol = { path = "../../protocol" }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
