[package]
name = "anemoi-nvidia"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "nvidia"
path = "src/main.rs"

[dependencies]
protocol = { path = "../../protocol" }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nvml-wrapper = { workspace = true }
