[package]
name = "anemoi-nvidia"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "nvidia"
path = "src/main.rs"

[dependencies]
anemos = { path = "../../anemos" }   # level-2 SDK (lifecycle/signals/logging/curve/EMA + traits)
nvml = { path = "../../tech/nvml" }  # level-1 tech (NVML GPU access)
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
